<resources>
    <string name="app_name">EQ彩幕王</string>
    <!--  EquitmentFragment   !-->
    <string name="hint_connection_to">已连接：</string>
    <string name="hint_start_wifi">开启wifi中...</string>
    <string name="hint_start_equit">搜索设备...</string>
    <string name="hint_connection_wifi">连接wifi中...</string>
    <string name="hint_control_wifi_failure">没有搜索到wifi</string>
    <string name="hint_connection_success">连接成功</string>
    <string name="hint_connection_failure">连接失败</string>
    <string name="hint_no_connection">选取网络</string>
    <string name="network_name">WIFI 连接</string>
    <string name="network_start_wifi">开启WIFI</string>
    <string name="network_no_connection">未连接WIFI</string>
    <string name="network_search_wifi">搜索附近WIFI</string>

    <!--  mdialog.xml wifi密码输入界面!-->
    <string name="wifi_password">密码</string>
    <string name="wifi_connection">连接</string>
    <string name="wifi_close">取消</string>
    <string name="action_settings">Settings</string>
    <string name="searchwiif">搜寻WIFI</string>
    <string name="programlist">节目列表</string>
    <string name="addprogram">添加节目</string>
    <string name="addEquit">添加设备</string>
    <string name="program_video">添加视频</string>
    <string name="program_text">添加文本</string>
    <string name="program_image">添加图片</string>
    <string name="program_time">添加时间</string>
    <string name="addprogram_name">节目名称</string>
    <string name="addprogram_new_name">新节目</string>
    <string name="find_programs">没有找到任何节目^_^</string>
    <string name="screenset">设置屏参</string>
    <string name="language">语言</string>
    <string name="setting_wifi">wifi设置</string>
    <string name="alert_hint">提示信息</string>
    <string name="main_program">节目</string>
    <string name="control_wifi">扫描WIFI</string>
    <string name="control_isopen">开关屏幕</string>
    <string name="control_setbrightness">调节亮度</string>
    <string name="setting_screenparameters">屏幕参数</string>
    <string name="setting_language">语言</string>
    <string name="setting_about">关于</string>
    <string name="screenparameters_setting">屏参设置</string>
    <string name="led_setting">屏幕</string>
    <!--  MainActivity,提示用户点击退出   !-->
    <string name="hint_exit">再按一次退出程序</string>
    <!--  programActivity   !-->
    <string name="program_parameters">节目参数</string>
    <string name="program_area_add">请选择需要的内容</string>
    <string name="program_area_reset">参数超出边界，请重新设置</string>
    <string name="popu_program_preview">预览</string>
    <string name="regional_management">区域管理</string>
    <string name="text">文本</string>
    <string name="image">图片</string>
    <string name="time">时间</string>
    <string name="video">视频</string>
    <string name="the_programme">设备类型</string>
    <string name="addthe_programme">添加节目类型</string>
    <string name="program_no">还没有节目哟！</string>
    <string name="xml_success">XML 生成成功！</string>
    <string name="xml_failure">XML 生成失败！</string>
    <string name="program_send_success">节目发送成功......</string>
    <string name="program_send_failure">节目发送失败......</string>
    <string name="program_send_failure1">节目发送失败,请检查网络是否连接......</string>
    <string name="program_sending">节目正在发送......</string>

    <!--  controlFragment   !-->
    <string name="control_open">打开屏幕</string>
    <string name="control_close">关闭屏幕</string>
    <string name="control_send_brightness">发送亮度:</string>
    <string name="control_load_data">回读数据</string>
    <string name="control_time_change">时间校对</string>
    <!--  hardwareFragment   !-->
    <string name="hardware_send">已发送</string>
    <string name="hardware_cardAddress_hint">控制卡地址不合法</string>
    <string name="hardware_port_hint">端口号不合法</string>
    <string name="hardware_ip_hint">ip不合法</string>
    <string name="hardware_subnet_hint">子网掩码不合法</string>
    <string name="hardware_gateway_hint">默认网关不合法</string>
    <string name="hardware_name">串行参数</string>
    <string name="hardware_cardAddress">控制卡地址:</string>
    <string name="hardware_baudrate">串口波特率</string>
    <string name="hardware_network_parameters">网络参数</string>
    <string name="hardware_ip">IP  地址  ：</string>
    <string name="hardware_port">端 口 号  ：</string>
    <string name="hardware_subnet">子网掩码：</string>
    <string name="hardware_gateway">默认网关：</string>


    <!--  programFragment   !-->
    <string name="program">节目</string>
    <string name="hardware_send_button">发送</string>
    <string name="equipment">设备 </string>
    <string name="program_edit_name">节目编辑</string>
    <string name="program_send_program">发送节目</string>

    <!--   setting fragment  !-->
    <string name="setting_language_cn">简体中文</string>
    <string name="setting_Follow">语言</string>
    <string name="system_language">跟随系统语言</string>
    <string name="setting_language_en">英语</string>
    <!--  brightness-dialog.xml !-->
    <string name="brightness_name">手动调节</string>
    <string name="brightness_dark">最暗0</string>
    <string name="brightness_bright">最亮100</string>
    <string name="brightness_setting">设置</string>
    <string name="brightness_readback">回读</string>
    <!--  led.xml !-->
    <string name="led_width">屏幕宽度:</string>
    <string name="led_height">屏幕高度:</string>
    <!--  popu_program.xml wifi密码输入界面!-->
    <string name="popu_program_send">发送节目</string>
    <string name="popu_program_edit">编辑</string>
    <string name="popu_program_delete">删除</string>
    <string name="popu_program_editor">编辑</string>
    <!--  window text.xml   文本窗参数界面-->
    <string name="text_parameters_text">文本编辑</string>
    <string name="text_parameters_image">图片编辑</string>
    <string name="text_parameters_vedio">视频编辑</string>
    <string name="text_parameters_time">时间编辑</string>
    <string name="submit">确定</string>
    <string name="file_size">文件大小</string>
    <string name="video_format">视频格式</string>
    <string name="vedio_len">视频长度</string>
    <string name="parameter_Settings">参数设置</string>
    <string name="name">类型名称:</string>
    <string name="single_line">单行文本</string>
    <string name="side_frame">边    框:</string>
    <string name="border_color">边框颜色:</string>
    <string name="text_parameters_w">宽    度:</string>
    <string name="text_parameters_h">高    度:</string>
    <string name="text_parameters_x">起点X:</string>
    <string name="text_parameters_y">起点Y:</string>
    <string name="text_parameters_content">请输入显示内容</string>
    <string name="text_parameter_x">请输入坐标x</string>
    <string name="text_parameter_y">请输入坐标y</string>
    <string name="text_parameter_w">请输入宽度</string>
    <string name="text_parameter_h">请输入高度</string>
    <string name="text_parameters_typepace">字体:</string>
    <string name="text_parameters_textsize">字体大小:</string>
    <string name="text_parameters_color">字体颜色:</string>
    <string name="text_parameters_bold">字体加粗:</string>
    <string name="text_parameters_italic">字体斜体:</string>
    <string name="text_parameters_underline">下 划 线:</string>
    <string name="text_parameters_background_color">背 景 色:</string>
    <string name="text_entry_stunt">进场特技:</string>
    <string name="text_entry_speed">进场速度:</string>
    <string name="text_clear_stunt">清场特技:</string>
    <string name="text_clear_speed">清场速度:</string>
    <string name="text_speed">运行速度：</string>
    <string name="text_hold_time">停留时间:</string>
    <!--  window program.xml   参数界面-->
    <string name="program_parameters_name">节目参数</string>
    <string name="program_parameters_name_n">节目名称</string>
    <string name="program_parameters_timer">定时播放</string>
    <string name="program_parameters_start">开始:</string>
    <string name="program_parameters_end">结束:</string>
    <string name="program_parameters_looping">循环播放模式</string>
    <string name="program_parameters_day">每天</string>
    <string name="program_parameters_date">日期：</string>
    <string name="program_parameters_week">星期：</string>
    <string name="program_parameters_to">至</string>
    <string name="program_parameters_Monday">一</string>
    <string name="program_parameters_Tuesday">二</string>
    <string name="program_parameters_Wednesday">三</string>
    <string name="program_parameters_Thursday">四</string>
    <string name="program_parameters_Friday">五</string>
    <string name="program_parameters_Saturday">六</string>
    <string name="program_parameters_Sunday">日</string>
    <string name="program_parameters_playmode">播放模式</string>
    <string name="program_parameters_playtime">限时播放</string>
    <string name="program_parameters_playorder">按顺序连续播放</string>
    <string name="program_parameters_s">秒</string>
</resources>
