<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    android:background="#fff"
    android:orientation="vertical" >

    <TextView
        android:visibility="gone"
        android:textSize="30sp"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="wifi"
        android:textColor="#fffffb"/>


    <EditText
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:id="@+id/number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center"
        android:hint="@string/wifi_password" />
    <!-- </LinearLayout> -->


    <LinearLayout
        android:padding="10dp"
        android:weightSum="2"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_gravity="bottom"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button

            android:layout_weight="1"
            android:text="@string/wifi_connection"
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <Button
            android:layout_weight="1"
            android:text="@string/wifi_close"
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>