<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eq.EQSuperPlayer.SlidingMenuActivity.LanguageActivity">
    <RelativeLayout
        android:id="@+id/alertTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#0080FF">

        <ImageView
            android:id="@+id/language_Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_return" />


        <TextView
            android:id="@+id/topTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/setting_Follow"
            android:textColor="#fff"
            android:textSize="20sp" />

    </RelativeLayout>

    <RadioButton
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/setting_Follow"
        android:id="@+id/radioButton"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:layout_below="@+id/alertTitle" />

    <RadioButton
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/setting_language_cn"
        android:id="@+id/radioButton2"
        android:layout_below="@+id/radioButton"
        android:checked="false"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/setting_language_en"
        android:id="@+id/radioButton3"
        android:checked="false"
        android:layout_below="@+id/radioButton2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
