<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/leftmenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/biz_news_local_weather_bg_big"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp" 
        android:paddingTop="10dp">

        <com.eq.EQSuperPlayer.view.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            app:border_color="#FFffffff"
            app:border_width="1dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="28.0dip"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/profile_image"
            android:gravity="center_vertical"
            android:paddingLeft="15.0dip"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="14.0sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvToday"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center_vertical"
        android:layout_marginTop="60dp"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/control_isopen"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@drawable/biz_pc_account_line" />

    <TextView
         android:id="@+id/tvLastlist"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/control_setbrightness"
        android:textColor="@color/white"
        android:textSize="16.0sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@drawable/biz_pc_account_line" />
    <TextView
        android:id="@+id/tvMyComments"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="16.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:background="@drawable/biz_pc_account_line" />

</LinearLayout>