<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/pop_shape"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/the_programme"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgray"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical">
        <com.eq.EQSuperPlayer.view.ProgramListView
            xmlns:dyk="http://schemas.android.com/apk/res/com.eq.EQSuperPlayer"
            android:id="@+id/program_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@color/darkgray"
            android:divider="#000"
            app:mode="right"
            android:dividerHeight="1dp"
            dyk:right_width="120dp" />
        <LinearLayout
            android:id="@+id/myText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/noitem" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_programs" />
        </LinearLayout>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgray"/>
    <Button
        android:id="@+id/pro_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/button_down"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/addthe_programme"/>

</LinearLayout>
